moved cast notifications to events; fixed gcp proper log format insertion